--- a/components/fvmitpqpj-python/overlays/development/deployment-patch.yaml
+++ b/components/fvmitpqpj-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fvmitpqpj-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-720c78dbf7.hw8l.p3.openshiftapps.com/rhtap/rhtap-qe-python:a754a5a8f0739cf0dbd40d74975a1f0b9ae8d39b@sha256:986bac1cc61b7a1ca3251da607e166dfc6fcd7019631a227f8ea3b01803bb884
+          name: container-image
